--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tie-invader",
   "version": "1.0.0",
   "description": "A space invader game inspired by Star Wars, made by Phaser 3",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
