--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A space invader game inspired by Star Wars, made by Phaser 3",
   "main": "server.js",
   "scripts": {
-    "start": "server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Coşkun Atak",
